methods.picture.PictureMono1.scala.code
override def run() {
  for (steve<-1 to 4) {
    forward();forward();
    makeV();
    forward();forward();
    left();
  }
  
  
}

def majeV() {
  brushDown();
  brushUp();
  forward();
  left();
  forward();
  brushDown();
  brushUp();
  backward();
  right();
  forward();
  brushDown();
  brushUp();
}